Fix background image not showing on Heroku
* Use image-url instead of url in CSS

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,7 +8,7 @@
   height: 100vh;
 
   .top-section {
-    background: url("number_plate.jpg");
+    background: image-url("number_plate.jpg");
     background-size: cover;
     height: 45vh;
     opacity: 0.9;
